--- a/ShopManagementSystem/ShopManagementSystem.csproj
+++ b/ShopManagementSystem/ShopManagementSystem.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <Compile Include="Call API\DataConn.cs" />
     <Compile Include="Call API\Service.cs" />
+    <Compile Include="ConfirmDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfirmDialog.Designer.cs">
+      <DependentUpon>ConfirmDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="fAccountProfile.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,12 +74,27 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InHoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InHoaDon.Designer.cs">
+      <DependentUpon>InHoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\ChiNhanhModel.cs" />
-    <Compile Include="Model\ChiTietHoaDonModel.cs" />
     <Compile Include="Model\CTDonMuaHang.cs" />
+    <Compile Include="Model\CTPhieuNhapKhoModel.cs" />
+    <Compile Include="Model\DoanhSoBanHangModel.cs" />
+    <Compile Include="Model\HoaDonModel.cs" />
     <Compile Include="Model\KhachHangModel.cs" />
+    <Compile Include="Model\KhuVucModel.cs" />
     <Compile Include="Model\LoginModel.cs" />
+    <Compile Include="Model\LuongNVModel.cs" />
+    <Compile Include="Model\NhaCungCapModel.cs" />
+    <Compile Include="Model\NhanVienModel.cs" />
+    <Compile Include="Model\PhanHoiModel.cs" />
+    <Compile Include="Model\PhieuNhapKhoModel.cs" />
     <Compile Include="Model\SanPhamModel.cs" />
+    <Compile Include="Model\TonKhoModel.cs" />
     <Compile Include="Model\UserInfoModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,6 +104,9 @@
     <Compile Include="TableManagement.Designer.cs">
       <DependentUpon>TableManagement.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ConfirmDialog.resx">
+      <DependentUpon>ConfirmDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fAccountProfile.resx">
       <DependentUpon>fAccountProfile.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +115,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InHoaDon.resx">
+      <DependentUpon>InHoaDon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -105,6 +132,7 @@
     <EmbeddedResource Include="TableManagement.resx">
       <DependentUpon>TableManagement.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\CTDonMuaHang.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
